--- a/complyze-extension-v2/popup.html
+++ b/complyze-extension-v2/popup.html
@@ -15,7 +15,7 @@
             width: 380px;
             min-height: 500px;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #0E1E36;
             color: white;
         }
 
@@ -23,21 +23,25 @@
             padding: 20px;
             text-align: center;
             border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+            color: white;
         }
 
         .logo {
             font-size: 24px;
             font-weight: bold;
             margin-bottom: 5px;
+            color: white;
         }
 
         .tagline {
             font-size: 12px;
             opacity: 0.8;
+            color: white;
         }
 
         .content {
             padding: 20px;
+            color: white;
         }
 
         .status-section {
@@ -45,12 +49,14 @@
             border-radius: 8px;
             padding: 15px;
             margin-bottom: 15px;
+            color: white;
         }
 
         .status-title {
             font-size: 14px;
             font-weight: 600;
             margin-bottom: 10px;
+            color: white;
         }
 
         .status-item {
@@ -59,10 +65,12 @@
             align-items: center;
             margin-bottom: 8px;
             font-size: 13px;
+            color: white;
         }
 
         .status-value {
             font-weight: 600;
+            color: white;
         }
 
         .button {
@@ -85,6 +93,7 @@
 
         .button.secondary {
             background: rgba(255, 255, 255, 0.2);
+            color: white;
         }
 
         .button.secondary:hover {
@@ -93,6 +102,7 @@
 
         .auth-section {
             text-align: center;
+            color: white;
         }
 
         .input-group {
@@ -104,6 +114,7 @@
             font-size: 12px;
             margin-bottom: 5px;
             opacity: 0.9;
+            color: white;
         }
 
         .input-group input {
@@ -141,6 +152,7 @@
         .loading {
             text-align: center;
             padding: 20px;
+            color: white;
         }
 
         .spinner {
@@ -164,6 +176,7 @@
             text-align: center;
             font-size: 11px;
             opacity: 0.7;
+            color: white;
         }
 
         .hidden {
